k8s/user-service/user-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-postgres
  namespace: iqscaffold-dev-env
  labels:
    app.kubernetes.io/name: user-postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: iqscaffold
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: user-postgres
    app.kubernetes.io/component: database
---
apiVersion: v1
kind: Service
metadata:
  name: user-postgres-staging
  namespace: staging-env
  labels:
    app.kubernetes.io/name: user-postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: iqscaffold
    environment: staging
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: user-postgres
    app.kubernetes.io/component: database
    environment: staging
---
apiVersion: v1
kind: Service
metadata:
  name: user-postgres-production
  namespace: iqscaffold-production-env
  labels:
    app.kubernetes.io/name: user-postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: iqscaffold
    environment: production
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: user-postgres
    app.kubernetes.io/component: database
    environment: production
